// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works with failed rating prop 1`] = `
<Text
  style={
    Object {
      "letterSpacing": 2,
    }
  }
>
  <Translation
    passThrough=""
  />
</Text>
`;

exports[`works with failed rating prop 2`] = `
<Text
  style={
    Object {
      "letterSpacing": 2,
    }
  }
>
  <Translation
    passThrough=""
  />
</Text>
`;

exports[`works with rating prop 1`] = `
<Text
  style={
    Object {
      "letterSpacing": 2,
    }
  }
>
  <Translation
    passThrough="★★★"
  />
</Text>
`;

exports[`works with rating prop 2`] = `
<Text
  style={
    Object {
      "letterSpacing": 2,
    }
  }
>
  <Translation
    passThrough="★★★★★★★★★★"
  />
</Text>
`;
